--- a/Config/MyClash.ini
+++ b/Config/MyClash.ini
@@ -1,11 +1,10 @@
 [custom]
-;解决DNS泄露，简易分流群组
+;解决DNS泄露，分流群组
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MusicLifa/MyRule/main/Ruleset/MyDirect.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
 ruleset=🚀 测速工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.list
-ruleset=💯️ 电影刮削,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tmdb/Tmdb.list
 ruleset=💯️ 电影刮削,https://raw.githubusercontent.com/akaet/openclash-rules/main/ruleset/TMDB.list
 ruleset=⛔ 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
@@ -20,12 +19,12 @@ ruleset=🎉 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=🦚 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🦚 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=🛩️ Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=🤸 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
+ruleset=🪇 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=🧿 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=🎠 Disney,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=🎥 HBO,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.list
 ruleset=🎺 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
-ruleset=📺 Bahamut,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
+ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
 ruleset=📢 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🎸 网易音乐,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
@@ -44,10 +43,11 @@ ruleset=🎿 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scrip
 ruleset=⛱️ 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=⛱️ 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=⛱️ 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+ruleset=⛱️ 节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
@@ -66,36 +66,37 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐠 漏网之鱼,[]FINAL
 
 
+custom_proxy_group=🧙‍ 手动切换`select`.*
+custom_proxy_group=🐠 漏网之鱼`select`[]⛱️ 节点选择`[]DIRECT`[]REJECT
+custom_proxy_group=⛱️ 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换`[]DIRECT
+custom_proxy_group=🎉 YouTube`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=💯️ 电影刮削`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🧙‍ 手动切换
+custom_proxy_group=📬 GitHub`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🦜 Twitter`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🚁‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🧙‍ 手动切换
+custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🧙‍ 手动切换
+custom_proxy_group=🎺 Spotify`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🧙‍ 手动切换
+custom_proxy_group=🌎 国外媒体`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🦚 谷歌服务`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🛩️ Telegram`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🍏 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=Ⓜ️ 必应搜索`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=⛷️ 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🎿 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🪇 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🧿 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🎠 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=📢 ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=📺 巴哈姆特`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🎸 网易音乐`select`[]🎯 全球直连`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
+custom_proxy_group=📺 国内媒体`select`[]🎯 全球直连`[]⛱️ 节点选择`[]🧙‍ 手动切换
 custom_proxy_group=⛔ 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐠 漏网之鱼`select`[]⛱️ 节点选择`[]REJECT
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]♻️ 自动选择
-custom_proxy_group=📺 Bahamut`select`[]🇹🇼 湾湾节点`[]⛱️ 节点选择
-custom_proxy_group=⛱️ 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`.*
-custom_proxy_group=📺 国内媒体`select`[]🎯 全球直连`[]🇹🇼 湾湾节点`[]🇭🇰 香港节点
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]⛱️ 节点选择`[]🧙‍ 手动切换
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🎸 网易音乐`select`[]🎯 全球直连`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
-custom_proxy_group=💯️ 电影刮削`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`[]🎯 全球直连
-custom_proxy_group=📬 GitHub`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]🎯 全球直连
-custom_proxy_group=🎉 YouTube`select`[]⛱️ 节点选择`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🎺 Spotify`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🌎 国外媒体`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🚁‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🦜 Twitter`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🎿 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🦚 谷歌服务`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🛩️ Telegram`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🍏 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=Ⓜ️ 必应搜索`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=⛷️ 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🤸 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🧿 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=🎠 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
-custom_proxy_group=📢 ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇵🇭 菲佣节点`[]🇸🇬 坡县节点`[]🇮🇳 阿三节点`[]🇸🇦 沙特节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇬🇧 英国节点`[]⛱️ 节点选择`.*
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|深港)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 坡县节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
