--- a/Config/MyClash.ini
+++ b/Config/MyClash.ini
@@ -67,7 +67,7 @@ ruleset=🐠 漏网之鱼,[]FINAL
 
 
 custom_proxy_group=🧙‍ 手动切换`select`.*
-custom_proxy_group=🐠 漏网之鱼`select`[]⛱️ 节点选择`[]DIRECT`[]REJECT
+custom_proxy_group=🐠 漏网之鱼`select`[]⛱️ 节点选择`[]🎯 全球直连`[]REJECT
 custom_proxy_group=⛱️ 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换`[]DIRECT
 custom_proxy_group=🎉 YouTube`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
 custom_proxy_group=💯️ 电影刮削`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🧙‍ 手动切换
