--- a/Config/MyClash.ini
+++ b/Config/MyClash.ini
@@ -110,7 +110,7 @@ custom_proxy_group=🇸🇦 沙特节点`url-test`(沙特阿拉伯|Saudi Arabia)
 custom_proxy_group=🇮🇳 阿三节点`url-test`(印度|India|新德里|孟买)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇦🇺 澳大利亚`url-test`(澳大利亚|Australia|堪培拉|墨尔本|悉尼|珀斯|霍巴特)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇨🇦 北美鬼子`url-test`(加拿大|Canada|渥太华|温哥华|卡尔加里)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇦 北美鬼佬`url-test`(加拿大|Canada|渥太华|温哥华|卡尔加里)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇬🇧 英国节点`url-test`(GB|英国|Great Britain)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇫🇷 法国节点`url-test`(FR|法国|France|巴黎)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇩🇪 德国节点`url-test`(DE|德国|Germany|柏林|法兰克福)`http://cp.cloudflare.com/generate_204`300,,50
