--- a/Config/MyClash.ini
+++ b/Config/MyClash.ini
@@ -1,5 +1,5 @@
 [custom]
-;解决DNS泄露，分流群组
+;解决DNS泄露，分流群组，包含去广告
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MusicLifa/MyRule/main/Ruleset/MyDirect.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
