--- a/Config/SWM.ini
+++ b/Config/SWM.ini
@@ -67,29 +67,29 @@ ruleset=🐠 漏网之鱼,[]FINAL
 
 custom_proxy_group=🧙‍ 手动切换`select`.*
 custom_proxy_group=🐠 漏网之鱼`select`[]⛱️ 节点选择`[]DIRECT`[]REJECT
-custom_proxy_group=⛱️ 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换`[]DIRECT
-custom_proxy_group=🎉 YouTube`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=💯️ 电影刮削`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🧙‍ 手动切换
-custom_proxy_group=📬 GitHub`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🦜 Twitter`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🚁‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🧙‍ 手动切换
-custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🧙‍ 手动切换
-custom_proxy_group=🎺 Spotify`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🧙‍ 手动切换
-custom_proxy_group=🌎 国外媒体`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🦚 谷歌服务`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🛩️ Telegram`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🍏 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=Ⓜ️ 必应搜索`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=⛷️ 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🎿 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🪇 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🧿 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=🎠 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=📢 ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
-custom_proxy_group=📺 巴哈姆特`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 澳大利亚`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=⛱️ 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换`[]DIRECT
+custom_proxy_group=🎉 YouTube`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=💯️ 电影刮削`select`[]🇺🇸 美国节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
+custom_proxy_group=📬 GitHub`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🦜 Twitter`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🚁‍ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
+custom_proxy_group=🎥 HBO`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
+custom_proxy_group=🎺 Spotify`select`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🧙‍ 手动切换
+custom_proxy_group=🌎 国外媒体`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🦚 谷歌服务`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🛩️ Telegram`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🍏 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=Ⓜ️ 必应搜索`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=⛷️ 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🎿 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🪇 TikTok`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🧿 Netflix`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=🎠 Disney`select`[]🇸🇬 坡县节点`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=📢 ChatGPT`select`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
+custom_proxy_group=📺 巴哈姆特`select`[]⛱️ 节点选择`[]🇭🇰 香港节点`[]🇹🇼 湾湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 坡县节点`[]🇹🇭 泰国节点`[]🇦🇺 土澳节点`[]🇺🇸 美国节点`[]🧙‍ 手动切换
 custom_proxy_group=🎸 网易音乐`select`[]🎯 全球直连`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=📺 国内媒体`select`[]🎯 全球直连`[]⛱️ 节点选择`[]🧙‍ 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]⛱️ 节点选择`[]🧙‍ 手动切换
@@ -105,7 +105,7 @@ custom_proxy_group=🇹🇭 泰国节点`url-test`(TH|泰国|曼谷|Thailand)`ht
 custom_proxy_group=🇵🇭 菲佣节点`url-test`(PH|菲律宾|马尼拉|Philippines)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇸🇦 沙特节点`url-test`(沙特阿拉伯|Saudi Arabia)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇮🇳 阿三节点`url-test`(印度|India|新德里|孟买)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇦🇺 澳大利亚`url-test`(澳大利亚|Australia|堪培拉|墨尔本|悉尼|珀斯|霍巴特)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇦🇺 土澳节点`url-test`(澳大利亚|Australia|堪培拉|墨尔本|悉尼|珀斯|霍巴特)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇨🇦 加拿大节点`url-test`(加拿大|Canada|渥太华|温哥华|卡尔加里)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇬🇧 英国节点`url-test`(GB|英国|Great Britain)`http://cp.cloudflare.com/generate_204`300,,50
